test/bad/automatic/extension/class/compile_time/0018.lat
class andrzej {
  int self;
}

int main() {
  andrzej andrzej = new andrzej;
  return andrzej.self;
}
